# gstaichi

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  checksums.csv  cherry_linx86.sh  docs.txt  genindex.html  index.html  markdown_link_check.py  netlify.toml  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  requirements_test.txt  requirements_test_xdist.txt  search.html  searchindex.js  setup.py  test_clock_speed.py
.github/workflows/: api_doc.yml  check_markup_links.yml  clang_tidy.yml  linters.yml  linux.yml  linux_x86.yml  mac_ondemand.yml  macosx.yml  manylinux_wheel.yml  pyright_linter.yml  test_gpu.yml  win.yml  win_ondemand.yml
_modules/: index.html
_modules/gstaichi/: experimental.html
autoapi/: index.html
autoapi/gstaichi/: index.html
benchmarks/: run.py
benchmarks/microbenchmarks/: _items.py  _metric.py  _plan.py  _utils.py  atomic_ops.py  fill.py  math_opts.py  matrix_ops.py  memcpy.py  saxpy.py  stencil2d.py
c_api/: taichi.json
c_api/cmake/: FindTaichi.cmake
c_api/src/: c_api_test_utils.cpp  taichi_core_impl.cpp  taichi_core_impl.h  taichi_gfx_impl.cpp  taichi_gfx_impl.h  taichi_llvm_impl.cpp  taichi_llvm_impl.h  taichi_metal_impl.h  taichi_metal_impl.mm  taichi_opengl_impl.cpp  taichi_opengl_impl.h  taichi_vulkan_impl.cpp  taichi_vulkan_impl.h
c_api/tests/: c_api_aot_test.cpp  c_api_behavior_test.cpp  c_api_cgraph_test.cpp  c_api_interface_test.cpp  c_api_interop_test.cpp  c_api_numerical_test.cpp  comet.cpp  mpm88_test.cpp  sph.cpp  taichi_sparse_test.cpp
cmake/: Distributed.cmake  GsTaichiCXXFlags.cmake  GsTaichiCore.cmake  GsTaichiTests.cmake  PythonNumpyPybind11.cmake  TaichiCAPI.cmake  TaichiCAPITests.cmake  TaichiCXXFlags.cmake  TaichiCore.cmake  TaichiTargets.cmake  TaichiTests.cmake
docs/: conftest.py
docs/source/: conf.py
duburcqa-patch-1-1/: py-modindex.html
duburcqa/cache_kernel_data/: genindex.html
duburcqa/early_return_materialize/: objects.inv  py-modindex.html
gs_taichi/aot/: graph_data.h  (+6 more)
gs_taichi/common/: CMakeLists.txt  cleanup.cpp  cleanup.h  commit_hash.h  core.cpp  core.h  dict.h  dynamic_loader.cpp  dynamic_loader.h  exceptions.h  interface.h  json.cpp  json_serde.h  logging.cpp  logging.h  one_or_more.h  ref_counted_pool.h  serialization.h  symbol_version.cpp  task.h  trait.h  types.h  version.h  virtual_dir.cpp  virtual_dir.h  zip.cpp  zip.h
gs_taichi/util/: CMakeLists.txt  base64.h  bit.cpp  bit.h  environ_config.h  file_sequence_writer.cpp  file_sequence_writer.h  hash.h  image_buffer.cpp  image_io.cpp  image_io.h  io.h  lang_util.cpp  lang_util.h  line_appender.h  lock.h  meta.h  offline_cache.cpp  offline_cache.h  short_name.cpp  short_name.h  str.cpp  str.h  testing.cpp  testing.h  zip.cpp
misc/: benchmark_bit_struct_stores.py  benchmark_bls.py  benchmark_compile.py  benchmark_parallel_compilation.py  benchmark_reduction.py  benchmark_reduction_tmps.py  benchmark_scatter_bls.py  benchmark_tensor_access.py  ci_setup.py  count_tags.py  demo_constant_fold.py  demo_launch_overhead.py  demo_listgen.py  demo_oob_ub.py  demo_trackback.py  generate_c_api.py  generate_ir_design_doc.py  idle_hello.py  make_changelog.py  minimal_timed.py  prtags.json  spMv_linear_solve.py  sparse_matrix.py  test_async_weaken_access.py  test_gpu_async.py  test_grid_stride_loop.py  test_memory_pool.py  test_poly_timed.py  test_print.py  test_without_init.py
python/: .gitignore
tests/: run_tests.py  test_utils.py
user_guide/: index.html
(+4433 files in other folders)
