[project]
name = "gstaichi"
description = "The GsTaichi Programming Language"
maintainers = [{name = "GsTaichi developers"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Compilers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Games/Entertainment :: Simulation",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = { text = "Apache Software License (http://www.apache.org/licenses/LICENSE-2.0)" }
keywords = ["graphics", "simulation"]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy",
    "colorama",
    "dill",
    "pydantic",
    "rich",
    "setuptools>=68.0.0",  # Required for Python 3.12+ compatibility
    "cffi>=1.16.0",
]

[tool.setuptools_scm]
write_to = "python/gstaichi/_version.py"
write_to_template = "__version__ = '{version}'\n"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-copybutton",
    "myst_parser",
    "sphinx-subfigure",
    "sphinxcontrib-video",
    "sphinx-togglebutton",
    "sphinx-design",
    "pydata-sphinx-theme",
    "sphinx-autoapi",
]

[project.urls]
Homepage = "https://github.com/Genesis-Embedded-AI/gstaichi"

[tool.setuptools]
license-files = ["LICENSE"]

[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel",
    "numpy>=2.0.0",
    "pybind11",
    "pybind11-stubgen",
    "cmake>=3.11",
    "scikit-build",
    "ninja; platform_system != 'Windows'",
    "psutil",
    "cffi>=1.16.0",
    "setuptools_scm>=6.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Calling non-taichi function",
    "ignore:`np.int` is a deprecated alias",
    "ignore:Operator \"is\" in Taichi scope is deprecated",
    "ignore:Operator \"is not\" in Taichi scope is deprecated"
]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = false

[tool.ruff]
exclude = [
    "external/**/*",
]

[tool.ruff.lint]
select = ["I"]  # Enable import ordering checks

[tool.ruff.lint.isort]
known-local-folder = ["taichi", "tests"]
known-third-party = ["pytest"]
